--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Random Team Generator</title>
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Archivo+Narrow" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
 <div id="app-container">
@@ -19,6 +19,6 @@
 	</form>
 	<div id="team-container"></div>
 </div>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
