--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Random Team Generator</title>
+	<title>Pithho Team Generator</title>
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Archivo+Narrow" rel="stylesheet">
 	<link rel="stylesheet"  href="style.css">
 </head>
 <body>
 <div id="app-container">
-	<h1>Random Team Generator</h1>
+	<h1>Pithhoo Team Generator</h1>
 	<form id="team-settings">
 		<label>Team Size</label>
 		<input />
 		<p id="size-error" class="error-text"></p>
 		<label>People</label>
-		<textarea placeholder="James Smith \nJohn Doe \netc." /></textarea>
+		<textarea placeholder="enter names in new line" /></textarea>
 		<p id="people-error" class="error-text"></p>
 		<button>Generate Teams!</button>
 	</form>
