--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <body>
 <div id="app-container">
 	<h1>Pithhoo Team Generator</h1>
+	<br>
+	<br>
 	<form id="team-settings">
 		<label>Team Size</label>
 		<input />
 		<p id="size-error" class="error-text"></p>
-		<label>People</label>
+		<label>Names</label>
 		<textarea placeholder="enter names in new line" /></textarea>
 		<p id="people-error" class="error-text"></p>
 		<button>Generate Teams!</button>
@@ -20,5 +22,8 @@
 	<div id="team-container"></div>
 </div>
 <script type="text/javascript" src="index.js"></script>
+
+	<p id="foot">created by Surjeet</p>
+
 </body>
 </html>
